nav size fix on mobile

--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@ nav {
 }
 
 a.nav-link {
-    padding: 15px;
+    padding: 10px;
 }
 
 
@@ -61,6 +61,7 @@ a.nav-link {
     top: 5%;
     right: 2%;
     padding-right: 3%;
+    margin-left: 5%;
 }
 
 @media (min-width: 800px) {
